# symtensor

./: CMakeLists.txt  Index_8h.html  LICENSE  MultipoleBase_8h.html  MultipoleMoment_8h.html  Multipole_8h.html  README.md  SymmetricTensorBase_8h.html  SymmetricTensor_8h.html  annotated.html  classsymtensor_1_1Multipole.html  classsymtensor_1_1MultipoleBase.html  classsymtensor_1_1MultipoleBaseFromTuple.html  classsymtensor_1_1MultipoleMoment.html  classsymtensor_1_1SymmetricTensor.html  classsymtensor_1_1SymmetricTensorBase.html  dir_ac8328523b41d8ce239fc77edbe15305.html  files.html  gravity2d.js  index.html  md__home_runner_work_symtensor_symtensor_doc_multipoles.html  md__home_runner_work_symtensor_symtensor_doc_symmetric_tensors.html  md__home_runner_work_symtensor_symtensor_examples_gravity2d_gravity2d.html  modules.html  namespaces.html  namespacesymtensor.html  pages.html  searchdata-v2.js  structA__3.html  structstd_1_1tuple__element_3_01I_00_01T_01_4.html  structstd_1_1tuple__size_3_01T_01_4.html  style.css  symtensor_8h.html
.github/workflows/: documentation.yml  unit-tests-multi-platform.yml
benchmarks/: CMakeLists.txt  gravity.cpp  multipole.cpp  multipoleMoment.cpp  symmetricTensor.cpp
doc/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.in  conf.py  multipoles.md  remove_title_from_index_page.cmake  style.css  symmetric-tensors.md
doc/pages/: main.md
examples/: CMakeLists.txt
examples/gravity2d/: CMakeLists.txt  bindings.cpp  gravity2d.js  gravity2d.md  main.cpp  plot.py
include/symtensor/: ArithmeticTuple.h  Index.h  Multipole.h  MultipoleBase.h  MultipoleMoment.h  SymmetricTensor.h  SymmetricTensor3.h  SymmetricTensorBase.h  concepts.h  glm.h  gravity.h  platform.h  symtensor.h  util.h
include/symtensor/gravity/: direct.h  einsum.h  tensorlib.h  tensorlib_autogen.h
tests/: CMakeLists.txt  arithmeticTuple.cpp  multipole.cpp  multipoleMoment.cpp  symmetricTensor.cpp  util.cpp
